--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+	font-family: "Jost";
+	src: url("/src/assets/fonts/Jost-Regular.ttf") format("truetype");
+}
